<resources>
    <string name="app_name">My_gpt</string>
    <string name="prompt">Enter a prompt</string>
    <string name="send">send</string>
    <string name="back">back</string>
    <string name="data">Api data</string>
    <string name="next">Next</string>
    <string name="card1">Ideas on how to decorate my house for a welcoming party for my sibling.</string>
    <string name="card2">Help me write an article on natural disasters and human actions to it. </string>
    <string name="card3">Write a code that will add three numbers in python language. </string>
    <string name="card4">Where can i go to enjoy my time this summer in Brazil, travel plan. </string>
    <string name="text_generator">Text Generator</string>
    <string name="clear">Clear</string>
    <string name="history">History</string>
    <string name="dots">dots</string>
    <string name="swipe">Swipe left to delete</string>
    <string name="my">My-GPT</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="user">AI at Your Fingertips: Smarter Decisions, Faster</string>
    <string name="text">Text Generator</string>
    <string name="img">Image Generator</string>
    <string name="summarizer">Summarizer</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="query">Query, suggestions, bugs....</string>
    <string name="email">Email (Optional)</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="tagline">Your AI Companion for a Smarter Tomorrow.</string>
    <string name="summ">Article Summarizer</string>
    <string name="url">Paste URL in here.</string>
    <string name="summary_here">Loading....</string>
    <string name="summarize">Summarize</string>
    <string name="image_generator">Image Generator</string>
    <string name="generate">Generate</string>
    <string name="img_hint">Enter a prompt here</string>
    <string name="download">Download</string>
    <string name="loading">Loading....</string>
    <string name="question">You have a question ,</string>
    <string name="answers">We have got the answer (well most of the times.)</string>
    <string name="ask">Ask what u wanna know..</string>
    <string name="faq">FAQ\'s</string>
    <string name="one">1. How should I develop my app over time?</string>
    <string name="two">2. How often should the app be updated?</string>
    <string name="three">3. How do frequent app updates impact user acquisition,    ASO, and monetization?</string>
    <string name="four">4. How much does the app cost?</string>
    <string name="five">5. What types of appointments can the app help me prepare for?</string>
    <string name="six">6. What happens to the information that I put into the app?</string>
    <string name="seven">7. Where are my data stored?</string>
    <string name="eight">8. If I switch to another app on my mobile device while using this app, will I lose my data?</string>
    <string name="nine">9. Will updates be made to the app?</string>
    <string name="ten">10. Who can I contact with more questions about the app or its contents?</string>
    <string name="submit">Submit</string>
    <string name="already">Already\nhave an\naccount?</string>
    <string name="email_here">Enter your Email here..</string>
    <string name="enter_password">Enter password</string>
    <string name="new_user">New user? Register Now</string>
    <string name="other_methods">Use other Methods</string>
    <string name="add">add</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="user_exists">Already \nhave an \nAccount?</string>
    <string name="login">Login</string>
    <string name="steps">Here’s\nyour first\nstep with \nus!</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="already_acc">Already have an account?</string>
    <string name="nothing">nothing</string>
    <string name="logout">Logout</string>
    <string name="user_email">User Email</string>
    <string name="no_email">No email</string>
    <string name="username">Username</string>
    <string name="welcome">Welcome!!</string>
    <string name="dash_about">About</string>
    <string name="usage">Usage:</string>
    <string name="tt">Text</string>
    <string name="image">Image</string>
    <string name="sum">Summary</string>
    <string name="zero">0</string>
    <string name="db">Dashboard</string>
    <string name="off">You are currently offline!!\nPlease connect to internet first\nand then come back here.</string>
</resources>