<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ImageActivity"
    android:background="@drawable/background">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        android:paddingHorizontal="20dp">

        <ImageView
            android:id="@+id/backToDash"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/back_btn"
            android:contentDescription="@string/back" />

        <TextView
            android:id="@+id/heading"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/backToDash"
            android:text="@string/image_generator"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp" />

        <ImageView
            android:id="@+id/dots"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/dots"
            android:contentDescription="@string/dots" />

        <RelativeLayout
            android:id="@+id/options"
            android:layout_toEndOf="@id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/option_box"
            android:paddingHorizontal="15dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginBottom="3dp"/>

            <TextView
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/history"
                android:text="@string/clear"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:visibility="gone"
                android:layout_marginBottom="3dp"/>

        </RelativeLayout>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        android:paddingVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintVertical_bias="0.079">

        <EditText
            android:id="@+id/url"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:autofillHints="no"
            android:background="@drawable/sum_text"
            android:hint="@string/img_hint"
            android:inputType="textUri"
            android:paddingHorizontal="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textIsSelectable="true"
            android:textSize="14sp" />

        <Button
            android:id="@+id/generate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/generate"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/generated"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="30dp"
            android:padding="5dp"
            android:background="@drawable/sum_text"
            android:contentDescription="@string/image_generator"
            android:visibility="gone"/>

        <Button
            android:id="@+id/download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imageLoader"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.77"
        app:lottie_autoPlay="false"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/images" />

    <TextView
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loading"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>