<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SummarizerActivity"
    android:background="@drawable/background">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        android:paddingHorizontal="20dp">

        <ImageView
            android:id="@+id/backToDash"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/back_btn"
            android:contentDescription="@string/back" />

        <TextView
            android:id="@+id/heading"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@id/backToDash"
            android:text="@string/summ"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp" />

        <ImageView
            android:id="@+id/dots"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/dots"
            android:contentDescription="@string/dots" />

        <RelativeLayout
            android:id="@+id/options"
            android:layout_toEndOf="@id/heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/option_box"
            android:paddingHorizontal="15dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginBottom="3dp"/>

            <TextView
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/history"
                android:text="@string/clear"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:visibility="gone"
                android:layout_marginBottom="3dp"/>

        </RelativeLayout>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="15dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="20dp">

            <EditText
                android:id="@+id/url"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:inputType="textUri"
                android:textColor="#5871FA"
                android:textSize="14sp"
                android:hint="@string/url"
                android:paddingHorizontal="10dp"
                android:background="@drawable/sum_text"
                android:textColorHint="@color/black"
                android:autofillHints="no"
                android:textIsSelectable="true"/>

            <Button
                android:id="@+id/summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/summarize"
                android:backgroundTint="@color/black"
                android:textColor="@color/white"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/smmry"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:paddingHorizontal="10dp"
                android:paddingVertical="10dp"
                android:singleLine="false"
                android:textColor="@color/black"
                android:text="@string/summary_here"
                android:background="@drawable/sum_text"
                android:textIsSelectable="true"
                android:visibility="gone"/>

        </LinearLayout>

    </ScrollView>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.813"
        app:lottie_autoPlay="false"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/summs" />

</androidx.constraintlayout.widget.ConstraintLayout>