<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Activities.FeedbackActivity"
    android:padding="15dp"
    android:background="@drawable/background">

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@drawable/feedback_bg">

     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/topic"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:paddingHorizontal="15dp"
         android:hint="@string/query"
         android:textColorHint="@color/black"
         android:textColor="@color/black"
         android:inputType="textEmailSubject"
         android:background="@android:color/transparent"
         android:gravity="center|start" />

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/black"/>

     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:paddingHorizontal="15dp"
         android:hint="@string/email"
         android:textColorHint="@color/black"
         android:textColor="@color/black"
         android:background="@android:color/transparent"
         android:inputType="textEmailAddress"
         android:gravity="center|start" />

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/black"/>

     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/feedbackMsg"
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:paddingHorizontal="15dp"
         android:hint="@string/feedback"
         android:textColorHint="@color/black"
         android:textColor="@color/black"
         android:background="@android:color/transparent"
         android:gravity="start" />

 </LinearLayout>

    <Button
        android:id="@+id/sendFb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:textColor="@color/white"
        android:backgroundTint="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/feedAnime"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:lottie_rawRes="@raw/lvl"
        app:lottie_autoPlay="false"
        app:lottie_loop="true"/>

</LinearLayout>